# DRF

./: .coverage  .env_sample  .gitignore  docker-compose.yaml  dockerfile  groups.json  pyproject.toml
config/: celery.py  settings.py  urls.py
lms_app/: admin.py  models.py  paginators.py  permissions.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms_app/migrations/: 0001_initial.py  0002_alter_lesson_video_url.py  0003_count_lessons.py  0004_delete_count_lessons.py  0005_course_owner_lesson_owner.py  0006_subscription.py  0007_purchase.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: create_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0002_payment.py
